--- a/amvera.yml
+++ b/amvera.yml
@@ -6,6 +6,6 @@ meta:
 build:
   requirementsPath: requirements.txt
 run:
-  scriptName: main.py
+  scriptName: app.py
   persistenceMount: /data
   containerPort: 80
